Add VueUse to project

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "story:preview": "histoire preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.2.0",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
