--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build-only": "vite build",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "lint:style": "stylelint src/**/*.{css,scss,vue}",
+    "lint:style": "stylelint 'src/**/*.{css,scss,vue}'",
     "story:dev": "histoire dev",
     "story:build": "histoire build",
     "story:preview": "histoire preview"
