--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@vueuse/core": "^9.2.0",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@histoire/plugin-vue": "^0.10.7",
