--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.2.0",
+    "axios": "^0.27.2",
     "pinia": "^2.0.17",
+    "qs": "^6.11.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3",
     "zod": "^3.19.1"
