--- a/package.json
+++ b/package.json
@@ -20,47 +20,48 @@
     "story:preview": "histoire preview"
   },
   "dependencies": {
-    "@vueuse/core": "^9.2.0",
+    "@vueuse/core": "^9.3.1",
     "axios": "^0.27.2",
-    "pinia": "^2.0.17",
+    "pinia": "^2.0.23",
     "qs": "^6.11.0",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.3",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.5",
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@histoire/plugin-vue": "^0.11.2",
-    "@rushstack/eslint-patch": "^1.1.4",
+    "@histoire/plugin-vue": "^0.11.5",
+    "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^20.0.0",
-    "@types/node": "^16.11.47",
-    "@vitejs/plugin-vue": "^3.0.1",
+    "@types/node": "^16.11.68",
+    "@types/qs": "^6.9.7",
+    "@vitejs/plugin-vue": "^3.1.2",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/test-utils": "^2.0.2",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/test-utils": "^2.1.0",
     "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.8",
-    "eslint": "^8.21.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "histoire": "^0.11.2",
-    "jsdom": "^20.0.0",
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.25.0",
+    "eslint-plugin-vue": "^9.6.0",
+    "histoire": "^0.11.5",
+    "jsdom": "^20.0.1",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.18",
     "postcss-html": "^1.5.0",
-    "postcss-scss": "^4.0.4",
+    "postcss-scss": "^4.0.5",
     "prettier": "^2.7.1",
-    "sass": "^1.54.8",
-    "stylelint": "^14.11.0",
+    "sass": "^1.55.0",
+    "stylelint": "^14.14.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
-    "stylelint-config-standard": "^28.0.0",
+    "stylelint-config-standard": "^29.0.0",
     "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-semantic-groups": "^1.1.4",
-    "typescript": "^4.8.2",
-    "vite": "^3.0.4",
-    "vitest": "^0.24.0",
-    "vue-tsc": "^1.0.0"
+    "typescript": "^4.8.4",
+    "vite": "^3.1.8",
+    "vitest": "^0.24.3",
+    "vue-tsc": "^1.0.8"
   }
 }
